# internal/app/server/server.go
@@ -5,6 +5,8 @@ import (
 	"IT4409/internal/app/handler"
 	blogRepository "IT4409/internal/app/repositories/blog"
 	commentRepository "IT4409/internal/app/repositories/comment"
+	tokenRepository "IT4409/internal/app/repositories/token"
+	userRepository "IT4409/internal/app/repositories/user"
 	"IT4409/internal/app/services"
 	"fmt"
 
@@ -29,13 +31,20 @@ func Run() {
 		viper.GetString("database.postgresql.password"), viper.GetString("database.postgresql.dbname"), viper.GetInt("database.postgresql.port"))
 	postgres := database.GetConnectionPool()
 	defer postgres.Close()
+	redisClient := database.GetRedisClient(viper.GetString("database.redis.dsn"))
 	blogRepo := blogRepository.NewBlogRepo(postgres)
 	commentRepo := commentRepository.NewCommentRepo(postgres)
+	userRepo := userRepository.NewUserRepo(postgres)
+	tokenRepo := tokenRepository.NewTokenRepo(redisClient)
 	blogService := services.NewBlogService(blogRepo, commentRepo, postgres)
 	commentService := services.NewCommentService(commentRepo, postgres)
+	userService := services.NewUserService(userRepo, postgres)
+	tokenService := services.NewTokenService(tokenRepo, viper.GetInt64("app.at_expires"), viper.GetInt64("app.rt_expires"),
+		viper.GetString("app.access_secret"), viper.GetString("app.refresh_secret"))
 	blogHandler := handler.NewBlogHandler(blogService)
 	commentHandler := handler.NewCommentHandler(commentService)
-	router := handler.GetRouter(blogHandler, commentHandler)
+	authHandler := handler.NewAuthHandler(userService, tokenService)
+	router := handler.GetRouter(blogHandler, commentHandler, authHandler)
 
 	srv := &http.Server{
 		Addr:         fmt.Sprintf(":%d", viper.GetInt("app.port")),
